.provarCaches/00D6C0000000xA6UAI/objects/Dataplier__Execution_Step_Log__c.object
<CustomObject>
    <fields>
        <fullName>Dataplier__Batch_Id__c</fullName>
        <label>Batch Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dataplier__Execution_Step__c</fullName>
        <label>Execution Step</label>
        <referenceTo>Dataplier__Execution_Step__c</referenceTo>
        <relationshipLabel>Execution Step Logs</relationshipLabel>
        <relationshipName>Execution_Step_Logs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Dataplier__Job_Id__c</fullName>
        <label>Job Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dataplier__Logs__c</fullName>
        <label>Logs</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Execution Step Log</label>
    <nameField>
        <displayFormat>ES-{0000000}</displayFormat>
        <label>Execution Step Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Execution Step Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>